Fix horizontal bounce on iOS Safari

--- a/r/style.css
+++ b/r/style.css
@@ -85,3 +85,7 @@ html {
   color: var(--dark);
   font-size: 0.9rem;
 }
+
+.mainContent {
+  overscroll-behavior-x: none !important;
+}
